--- a/src/helpers/templates/forgotpass.html
+++ b/src/helpers/templates/forgotpass.html
@@ -105,7 +105,7 @@
 
   <body
     style="
-      background-color: #f0ded4
+      background-color: #f0ded4;
       margin: 0;
       padding: 0;
       -webkit-text-size-adjust: none;
@@ -217,8 +217,8 @@
                                         max-width: 100%;
                                       "
                                       width="195"
-                                      alt="jokopi"
-                                      title="jokopi"
+                                      alt="coffeeup"
+                                      title="coffeeup"
                                     />
                                   </div>
                                 </td>
@@ -750,8 +750,8 @@
                                         "
                                       >
                                         <span style="color: #6a4029"
-                                          >jokopi © ·</span
-                                        ><span style>2023</span>
+                                          >coffeeup </span
+                                        ><span style>2025</span>
                                       </p>
                                     </div>
                                   </div>
